# ISRO-space-challenge

./: .gitignore  main.py  pyproject.toml  weather_forecast.py
website/: __init__.py  forecast.py  views.py
website/templates/: 404 forecast.html  500notindb.html  500notindbw.html  base.html  data-phone.html  data.html  forecast.html  ipcheck.html  ipforecast.html  land.html
